# dagster-jaffle-shop

./: .example-env  .gitignore  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: customers.sql  customers.yml  locations.sql  locations.yml  metricflow_time_spine.sql  order_items.sql  order_items.yml  orders.sql  orders.yml  products.sql  products.yml  supplies.sql  supplies.yml
dbt/models/staging/: __sources.yml  stg_customers.sql  stg_customers.yml  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_order_items.yml  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_products.yml  stg_supplies.sql  stg_supplies.yml
src/dagster_jaffle_shop/: definitions.py
src/dagster_jaffle_shop/defs/: resources.py  schedules.py
src/dagster_jaffle_shop/defs/assets/: dbt_assets.py  raw_assets.py
